get blob escape path
